@@ -1,10 +1,14 @@
 <?php
 include_once 'includes/init.php';
 send_no_cache_header ();
-load_user_layers ();
+
+if (($user != $login) && $is_nonuser_admin)
+  load_user_layers ($user);
+else
+  load_user_layers ();
 
 function display_small_month ( $thismonth, $thisyear, $showyear ) {
-  global $WEEK_START, $user, $login;
+  global $WEEK_START, $user, $login, $boldDays, $get_unapproved;
 
   if ( $user != $login && ! empty ( $user ) )
     $u_url = "&user=$user";
@@ -38,12 +42,27 @@ function display_small_month ( $thismonth, $thisyear, $showyear ) {
     echo "<TR>";
     for ($j = 0; $j < 7; $j++) {
       $date = $i + ($j * 24 * 3600);
-      if ( date("Ymd",$date) >= date ("Ymd",$monthstart) &&
-        date("Ymd",$date) <= date ("Ymd",$monthend) ) {
+      $dateYmd = date ( "Ymd", $date );
+      $hasEvents = false;
+      if ( $boldDays ) {
+        $ev = get_entries ( $user, $dateYmd, $get_unapproved );
+        if ( count ( $ev ) > 0 ) {
+          $hasEvents = true;
+        } else {
+          $rep = get_repeating_entries ( $user, $dateYmd, $get_unapproved );
+          if ( count ( $rep ) > 0 )
+            $hasEvents = true;
+        }
+      }
+      if ( $dateYmd >= date ("Ymd",$monthstart) &&
+        $dateYmd <= date ("Ymd",$monthend) ) {
         echo "<TD ALIGN=\"right\"><A HREF=\"day.php?date=" .
-          date ( "Ymd", $date ) . $u_url .
+          $dateYmd . $u_url .
           "\" CLASS=\"dayofmonthyearview\">";
-        echo "<FONT SIZE=\"-1\">" . date ( "j", $date ) .
+        echo "<FONT SIZE=\"-1\">" .
+          ( $hasEvents ? "<b>" : "" ) .
+          date ( "j", $date ) .
+          ( $hasEvents ? "</b>" : "" ) .
           "</A></FONT></TD>";
       } else
         echo "<TD></TD>";
@@ -69,6 +88,23 @@ $nextYear= $year + 1;
 
 if ( $allow_view_other != "Y" && ! $is_admin )
   $user = "";
+
+$boldDays = false;
+if ( ! empty ( $bold_days_in_year ) && $bold_days_in_year == 'Y' ) {
+  /* Pre-Load the repeated events for quckier access */
+  $repeated_events = read_repeated_events (
+    ( ! empty ( $user ) && strlen ( $user ) ) ? $user : $login, $cat_id );
+
+  /* Pre-load the non-repeating events for quicker access */
+  $events = read_events ( ( ! empty ( $user ) && strlen ( $user ) )
+    ? $user : $login, $year . "0101", $year . "1231", $cat_id );
+  $boldDays = true;
+}
+
+// Include unapproved events?
+$get_unapproved = ( $DISPLAY_UNAPPROVED == 'Y' );
+if ( $user == "__public__" )
+  $get_unapproved = false;
 
 print_header();
 ?>
